--- a/General.html
+++ b/General.html
@@ -9,7 +9,6 @@
         crossorigin="anonymous">
 
     <!-- <link rel="stylesheet" href="css/estiloGeneral.css"> -->
-    <link rel="stylesheet" href="css/estiloPlantilla.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
@@ -19,6 +18,9 @@
     <script src="js/scriptPlantilla.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
         crossorigin="anonymous">
+
+    <link rel="stylesheet" href="css/estiloPlantilla.css">
+
 </head>
 
 <body>
@@ -27,13 +29,13 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Detalle</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    <table>
+                <div class="modal-body" >
+                    <table class="table-bordered" >
                         <thead>
                             <tr>
                                 <th>Fecha disp.</th>
@@ -48,7 +50,87 @@
                             </tr>
                         </thead>
                         <tbody>
-
+                            <tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr><tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr><tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr><tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr><tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr><tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr><tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr><tr>
+                                <td>23/12/2019</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>50,000</td>
+                                <td>23/12/2019</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
