--- a/General.html
+++ b/General.html
@@ -51,7 +51,7 @@
                             </tr>
                         </thead>
                         <tbody id="tablaModalDetalle">
-                            
+
                         </tbody>
                     </table>
                 </div>
@@ -122,7 +122,7 @@
     </form>
 
     <div class="row" id="landing">
-        <h3>Realize una consulta</h3>
+        <h3>Realice una consulta</h3>
     </div>
 
     <div class="row" id="loading">
@@ -132,62 +132,70 @@
         </div>
     </div>
 
-    <div class="row" id="body">
+    <div class="row">
         <div class="col">
-            <div class="tabla" id="colocacion">
-                <h4>CARTERA</h4>
-                <table class="table table-bordered">
-                    <thead>
-                        <tr id="tablaColocacionHead">
+            <div class="row" id="body">
+                <div class="col">
+                    <div class="tabla" id="colocacion">
+                        <h4>CARTERA</h4>
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr id="tablaColocacionHead">
 
-                        </tr>
-                    </thead>
-                    <tbody id="tablaColocacionBody">
-                    </tbody>
-                </table>
+                                </tr>
+                            </thead>
+                            <tbody id="tablaColocacionBody">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tabla" id="colocacion">
+                        <h4>&nbsp;</h4>
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr id="tablaColocacionPrcHead">
+
+                                </tr>
+                            </thead>
+                            <tbody id="tablaColocacionPrcBody">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="row" id="body">
+                <div class="col">
+                    <div class="tabla" id="colocacion">
+                        <h4>Cartera</h4>
+                        <table class="table table-bordered">
+                            <tbody id="tablaCarteraContable">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="tabla" id="colocacion">
+                        <h4>Cartera</h4>
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>ACA</th>
+                                    <th>MA</th>
+                                </tr>
+                            </thead>
+                            <tbody id="VSBody">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col">
-            <div class="tabla" id="colocacion">
-                <h4>&nbsp;</h4>
-                <table class="table table-bordered">
-                    <thead>
-                        <tr id="tablaColocacionPrcHead">
-
-                        </tr>
-                    </thead>
-                    <tbody id="tablaColocacionPrcBody">
-                    </tbody>
-                </table>
-            </div>
+            <canvas id="canvasCartera" width="400" height="300"></canvas>
         </div>
     </div>
-    <div class="row" id="body">
-        <div class="col">
-            <div class="tabla" id="colocacion">
-                <h4>Cartera</h4>
-                <table class="table table-bordered">
-                    <tbody id="tablaCarteraContable">
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <div class="col">
-            <div class="tabla" id="colocacion">
-                <h4>Cartera</h4>
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th>ACA</th>
-                            <th>MA</th>
-                        </tr>
-                    </thead>
-                    <tbody id="VSBody">
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+
 
     <div class="row" id="body">
         <div class="col">
