--- a/General.html
+++ b/General.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Monitor de Cobranza</title>
+    <title>Monitor de Cobranza: General</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
 
@@ -146,12 +146,12 @@
         <div class="col">
             <div class="row" id="body">
                 <div class="col">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered tablasCartera">
                         <thead>
                             <tr>
                                 <th colspan="8" class="tituloTabla">CARTERA</th>
                             </tr>
-                            <tr id="tablaColocacionHead">
+                            <tr class="tablaCarteraHead">
 
                             </tr>
                         </thead>
@@ -163,9 +163,18 @@
             <div class="row" id="body">
                 <div class="col">
                     <table class="table table-bordered">
+                        <thead>
+                            <th colspan="3">Cartera Contable</th>
+                        </thead>
                         <tbody id="tablaCarteraContable">
                         </tbody>
                     </table>
+                    <table class="table table-bordered">
+                            <thead id="tablaICVHead">
+                            </thead>
+                            <tbody id="tablaICV">
+                            </tbody>
+                        </table>
                 </div>
                 <div class="col">
                     <table class="table table-bordered">
@@ -189,7 +198,7 @@
 
     <div class="row" id="body">
         <div class="col">
-            <table class="table table-bordered">
+            <table class="table table-bordered tablasCartera">
                 <thead>
                     <tr>
                         <th colspan="8" class="tituloTabla">CARTERA POR BUCKETS</th>
@@ -198,7 +207,7 @@
 
                     </tr>
                 </thead>
-                <tbody id="CarteerBody">
+                <tbody id="CarteraBody">
                 </tbody>
             </table>
         </div>
@@ -209,13 +218,21 @@
 
     <div class="row" id="body">
         <div class="col">
-            <table class="table table-bordered">
+            <table class="table table-bordered tablaCarteraOperativa">
                 <thead>
                     <tr>
                         <th colspan="8" class="tituloTabla">CARTERA OPERATIVA</th>
+                        <th colspan="8" class="tituloTabla">CARTERA OPERATIVA POR COBRAR</th>
                     </tr>
                     <tr id="CarteraOperativaHead">
                         <th></th>
+                        <th>VIGENTE</th>
+                        <th>VENCIDA</th>
+                        <th>CASTIGO CONTABLE</th>
+                        <th>CASTIGO FISCAL</th>
+                        <th style="color: #fff; background-color: #212529;">TOTAL</th>
+                        <th>TOTAL</th>
+                        <th>%</th>
                         <th>VIGENTE</th>
                         <th>VENCIDA</th>
                         <th>CASTIGO CONTABLE</th>
@@ -230,31 +247,10 @@
             </table>
         </div>
         <br>
-        <div class="col">
-                <table class="table table-bordered">
-                    <thead>
-                        <tr>
-                            <th colspan="8" class="tituloTabla">CARTERA OPERATIVA POR COBRAR</th>
-                        </tr>
-                        <tr id="CarteraOperativaCobrarHead">
-                            <th></th>
-                            <th>VIGENTE</th>
-                            <th>VENCIDA</th>
-                            <th>CASTIGO CONTABLE</th>
-                            <th>CASTIGO FISCAL</th>
-                            <th style="color: #fff; background-color: #212529;">TOTAL</th>
-                            <th>TOTAL</th>
-                            <th>%</th>
-                        </tr>
-                    </thead>
-                    <tbody id="CarteraOperativaCobrarBody">
-                    </tbody>
-                </table>
-            </div>
     </div>
 
     <div class="row" id="body">
-        
+
     </div>
 
     <div class="row" id="body">
