--- a/InactividadAtraso.html
+++ b/InactividadAtraso.html
@@ -115,7 +115,34 @@
     </div>
 
     <div class="row" id="body">
-
+        <table class="table table-bordered"> 
+            <thead>
+                <tr class="tituloTabla">
+                </tr>
+                <tr>
+                    <th style="width: 120px;">Inactividad</th>
+                    <th style="width: 100px;">Actual</th>
+                    <th style="width: 100px;">1-29</th>
+                    <th style="width: 100px;">30-59</th>
+                    <th style="width: 100px;">Atraso 90</th>
+                    <th style="width: 100px;">Atraso 120</th>
+                    <th style="width: 100px;">Atraso 150</th>
+                    <th style="width: 100px;">Atraso 180</th>
+                    <th style="width: 100px;">Atraso 210</th>
+                    <th style="width: 100px;">Atraso 240</th>
+                    <th style="width: 100px;">Atraso 270</th>
+                    <th style="width: 100px;">Atraso > 270</th>
+                    <th style="width: 100px;">TOTAL</th>
+                </tr>
+                <tr>
+                    <th colspan="13">$</th>
+                </tr>
+            </thead>
+            <tbody id="tablaAtraso" class="tablaAtrasoInactividad">
+            </tbody>
+        </table>
+    </div>
+    <div class="row" id="body">
         <table class="table table-bordered">
             <thead>
                 <tr class="tituloTabla">
@@ -139,7 +166,7 @@
                     <th colspan="13">$</th>
                 </tr>
             </thead>
-            <tbody id="tablaAtraso">
+            <tbody id="tablaAtrasoPCT" class="tablaAtrasoInactividad">
             </tbody>
         </table>
     </div>
