--- a/General.html
+++ b/General.html
@@ -83,6 +83,17 @@
                 <h3>General</h3>
             </div>
             <div class="col-sm">
+                <div>
+                    <label for="mes">Periodo: </label>
+                </div>
+                <select required name="inputMes" id="inputMes" class="form-control">
+
+                </select>
+                <select required name="inputAno" id="inputAno" class="form-control">
+
+                </select>
+            </div>
+            <div class="col-sm">
                 <label for="division">Buscar Por: </label>
                 <select required name="inputDivision" id="inputDivision" class="form-control">
                     <option value="ANALISTA">Analista</option>
@@ -91,7 +102,7 @@
             </div>
             <div class="col-sm">
                 <label for="mes">Nombre: </label>
-                <select required name="inputMes" id="inputMes" class="form-control">
+                <select required name="inputMes" id="inputNombre" class="form-control">
                     <option value="201801">TODAS</option>
                     <option value="201802">GDF</option>
                     <option value="201802">SEF CHIAPAS</option>
@@ -107,26 +118,6 @@
                     <option value="201802">HILARIO ANDRES</option>
                 </select>
             </div>
-            <div class="col-sm">
-                <label for="mes">Fecha: </label>
-                <select required name="inputMes" id="inputMes" class="form-control">
-                    <option disabled hidden selected value="">Elija una opción</option>
-                    <option value="201801">2018/01</option>
-                    <option value="201802">2018/02</option>
-                    <option value="201803">2018/03</option>
-                    <option value="201804">2018/04</option>
-                    <option value="201805">2018/05</option>
-                    <option value="201806">2018/06</option>
-                    <option value="201807">2018/07</option>
-                    <option value="201808">2018/08</option>
-                    <option value="201809">2018/09</option>
-                    <option value="201810">2018/10</option>
-                    <option value="201811">2018/11</option>
-                    <option value="201812">2018/12</option>
-                </select>
-            </div>
-
-
             <button type="button" id="btnBuscar" class="btn btn-primary" onclick="getColocacion()">Consultar</button>
         </div>
     </form>
@@ -160,24 +151,25 @@
                     </table>
                 </div>
             </div>
-            <div class="row" id="body">
-                <div class="col">
-                    <table class="table table-bordered">
-                        <thead>
-                            <th colspan="3">Cartera Contable</th>
-                        </thead>
-                        <tbody id="tablaCarteraContable">
-                        </tbody>
-                    </table>
-                    <table class="table table-bordered">
+            <div class="row">
+                <div class="col" id="body">
+                    <div class="row">
+                        <table class="table table-bordered tablitas">
+                            <thead id="tablaCarteraContableHead"></thead>
+                            <tbody id="tablaCarteraContable">
+                            </tbody>
+                        </table>
+                        <br>
+                        <table class="table table-bordered tablitas">
                             <thead id="tablaICVHead">
                             </thead>
                             <tbody id="tablaICV">
                             </tbody>
                         </table>
+                    </div>
                 </div>
                 <div class="col">
-                    <table class="table table-bordered">
+                    <table class="table table-bordered tablitas tablaACA">
                         <thead>
                             <tr>
                                 <th>ACA</th>
@@ -189,6 +181,7 @@
                     </table>
                 </div>
             </div>
+
         </div>
         <div class="col">
             <canvas id="canvasCartera" width="400" height="300"></canvas>
