--- a/InactividadAtraso.html
+++ b/InactividadAtraso.html
@@ -51,7 +51,7 @@
                                     <th>Estatus contable</th>
                                     <th>Estatus operativo</th>
                                     <th>Saldo</th>
-                                    <th>?</th>
+                                    <th>Comentarios</th>
                                     <th>Fecha último pago</th>
                                 </tr>
                             </thead>
@@ -77,7 +77,7 @@
                 <img class="imgMasNomina" src="img/logo_mas_nomina.jpg" alt="">
             </div>
             <div class="col-sm">
-                <h3>General</h3>
+                <h3>Inactividad y atraso</h3>
             </div>
             <div class="col-sm">
                 <div>
@@ -131,10 +131,8 @@
     </div>
 
     <div class="row" id="body">
-        <table class="table table-bordered">
+        <table class="table table-bordered numeros">
             <thead>
-                <tr class="tituloTabla">
-                </tr>
                 <tr>
                     <th style="width: 120px;">Inactividad</th>
                     <th style="width: 100px;">Actual</th>
@@ -159,10 +157,8 @@
         </table>
     </div>
     <div class="row" id="body">
-        <table class="table table-bordered">
+        <table class="table table-bordered porcentajes">
             <thead>
-                <tr class="tituloTabla">
-                </tr>
                 <tr>
                     <th style="width: 120px;">Inactividad</th>
                     <th style="width: 100px;">Actual</th>
