--- a/General.html
+++ b/General.html
@@ -302,6 +302,20 @@
             </table>
         </div>
     </div>
+    <div class="col">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th colspan="4" class="tituloTabla">ESTIMACIÓN PREVENTIVA</th>
+                </tr>
+                <tr id="EstimacionPrevHead">
+
+                </tr>
+            </thead>
+            <tbody id="EstimacionPrevBody">
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
