--- a/InactividadAtraso.html
+++ b/InactividadAtraso.html
@@ -182,6 +182,23 @@
             </tbody>
         </table>
     </div>
+    <div class="row" id="body">
+        <table class="table table-bordered resumen">
+            <thead>
+                <tr>
+                    <td class="tituloTabla" colspan="4">RESUMEN</td>
+                </tr>
+                <tr>
+                    <th style="width: 120px;"></th>
+                    <th style="width: 100px;">Capital</th>
+                    <th style="width: 100px;">Intereses</th>
+                    <th style="width: 100px;">IVA</th>
+                </tr>
+            </thead>
+            <tbody id="tablaResumen">
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
